@@ -1,7 +1,10 @@
 1.0.1.dev1
 -------------------------------
 
-- fix issue43: add pip>=1.4 to dependencies.
+- fix issue43: set PIP_PRE environment variable when executing
+  "devpi install ..." so that the behaviour between 
+  pip < 1.4 and >= 1.4 is normalized to always install 
+  development versions.
 
 1.0
 -------------------------------
